--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.10.4",
     "bcrypt": "^4.0.1",
     "brcypt": "^1.0.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
